<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">
    <TextView
        android:text="@string/enter_label_text"
        android:textAppearance="@android:style/TextAppearance.Large"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp" />
    <EditText
        android:id="@+id/phone_number_text"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/default_text"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp" />
    <Button
        android:id="@+id/translate_button"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/translate_button_text" />
    <Button
        android:id="@+id/call_button"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/call_button_text"
        android:enabled="false" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/call_log_button_text"
        android:id="@+id/call_log_button"
        android:layout_gravity="center_horizontal" />
</LinearLayout>